tests/snapshots/snapshot_integration__dot_polyline__compound_nested_blocks.snap
---
source: tests/snapshot_integration.rs
expression: output
---
digraph {
graph [splines=polyline];
D0 [shape=box, style=rounded, label="begin"];
{rank = sink; D1 [shape=box, style=rounded, label="end"];}
D4 [shape=box, label="int x = 0;"];
D10 [shape=box, label="x += 1;"];
D14 [shape=box, label="x += 2;"];
D16 [shape=box, label="return x;"];
D4 -> D10;
D10 -> D14;
D14 -> D16;
D16 -> D1;
D0 -> D4;
}
