tests/snapshots/snapshot_integration__dot_polyline__empty_statement_cleanup.snap
---
source: tests/snapshot_integration.rs
expression: output
---
digraph {
graph [splines=polyline];
D0 [shape=box, style=rounded, label="begin"];
{rank = sink; D1 [shape=box, style=rounded, label="end"];}
D4 [shape=box, label="int x = 0;"];
D8 [shape=box, label="x++;"];
D12 [shape=box, label="return x;"];
D8 -> D12;
D4 -> D8;
D12 -> D1;
D0 -> D4;
}
