tests/snapshots/snapshot_integration__dot_polyline__for_loop.snap
---
source: tests/snapshot_integration.rs
expression: output
---
digraph {
graph [splines=polyline];
D0 [shape=box, style=rounded, label="begin"];
{rank = sink; D1 [shape=box, style=rounded, label="end"];}
D4 [shape=box, label="int sum = 0;"];
D8 [shape=diamond, label="i < 3?"];
D9 [shape=box, label="int i = 0;"];
D10 [shape=box, label="i++"];
D13 [shape=box, label="sum += i;"];
D15 [shape=box, label="return sum;"];
D4 -> D9;
D8:e -> D15:n [xlabel=N];
D9 -> D8;
D13 -> D10;
D10 -> D8;
D8:s -> D13:n [xlabel=Y];
D15 -> D1;
D0 -> D4;
}
