tests/snapshots/snapshot_integration__dot_polyline__for_missing_init_cond_upd.snap
---
source: tests/snapshot_integration.rs
expression: output
---
digraph {
graph [splines=polyline];
D0 [shape=box, style=rounded, label="begin"];
{rank = sink; D1 [shape=box, style=rounded, label="end"];}
D4 [shape=box, label="int k = 0;"];
D8 [shape=diamond, label="true?"];
D13 [shape=box, label="k++;"];
D15 [shape=diamond, label="(k > 2)?"];
D20 [shape=box, label="break"];
D22 [shape=box, label="return k;"];
D15:e -> D8:n [xlabel=N];
D20 -> D22;
D8:e -> D22:n [xlabel=N];
D13 -> D15;
D15:s -> D20:n [xlabel=Y];
D4 -> D8;
D8:s -> D13:n [xlabel=Y];
D22 -> D1;
D0 -> D4;
}
