tests/snapshots/snapshot_integration__dot_polyline__goto_backward_label.snap
---
source: tests/snapshot_integration.rs
expression: output
---
digraph {
graph [splines=polyline];
D0 [shape=box, style=rounded, label="begin"];
{rank = sink; D1 [shape=box, style=rounded, label="end"];}
D4 [shape=box, label="int x = 0;"];
D7 [shape=box, label="x++;"];
D9 [shape=diamond, label="(x < 3)?"];
D15 [shape=box, label="return x;"];
D4 -> D7;
D7 -> D9;
D9:s -> D7:n [xlabel=Y];
D9:e -> D15:n [xlabel=N];
D15 -> D1;
D0 -> D4;
}
